2008-04-30  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/lirc.pyL RemoteL Added __set_contributor(),
	  __set_vendor(), and __set_product(). __repr__(): Used them to make 
	these properties writeable.
	* gnome_lirc_properties/ui/CustomConfiguration.py;
	  CustomConfiguration._on_response(): Set these properties so that  
	they are written to the custom lird.conf.gnome file, so they are shown 
	again when reopening the custom configuration.
	This fixes bug #530504.

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/net/services.py post_file(),
	RetrieveTarballThread._retrieve(),
	RetrieveTarballThread._retrieve_archive(): Added more logging and 
	TODOS because upload/download hang when the URIs are totally bogus.

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* data/gnome-lirc-properties.glade: Improve some mnemonics, fixing 
	bug #530349 (Wouter Bolsterlee).

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/net/services.py (post_file): Improve the logging, 
	so we see what URL is having a problem.

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/net/services.py (post_file,
	RetrieveTarballThread._retrieve(): Document some exceptions that this 
	can throw.
	RetrieveTarballThread._retrieve_checksum(): Catch exceptions 
	separately so we can log more details.
	RetrieveTarballThread._retrieve_archive(): Catch HTTPException 
	as well as the existing exceptions, so we can catch BadStatusLine.
	Add some logging.

	This fixes the crash and hang in bug #529853, though it does not explain 
	why we have an error. (The .tar.gz file exists, but is of 0 size, which 
	should probably be OK.)

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* data/gnome-lirc-properties.glade: Removed the <small></small> 
	device name label, because it is confusing to translators.
	This fixes bug #530348 (Wouter Bolsterlee).

2008-04-28  Murray Cumming  <murrayc@murrayc.com>
