@@ -1,5 +1,9 @@
 2008-04-30  Murray Cumming  <murrayc@murrayc.com>
 
+	* help/C/gnome-lirc-properties.xml: Minor improvements.
+
+2008-04-30  Murray Cumming  <murrayc@murrayc.com>
+
 	* gnome_lirc_properties/lirc.pyL RemoteL Added __set_contributor(),
 	  __set_vendor(), and __set_product(). __repr__(): Used them to make 
 	these properties writeable.
